# blockchain_lab

./: .gitignore
elliptic_curve/: elliptic_curve.cc  elliptic_curve.py
hash_collision/: CMakeLists.txt  README.md
hash_collision/include/: base64.h  md5.h  md5_const.h  sha1.h  sha1_const.h  util.h
hash_collision/src/: base64.cc  main.cc  md5.cc  sha1.cc
proof_of_work/: preimage_search.cc  test.cc
sig_forgery/: sig_forgery.cc  sig_forgery.h
